[package]
name = "gitrel"
version = "0.2.11"
authors = ["Evgenii Grigorev <zjekadev@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "GitHub binary manager - install and update single binary releases via GitHub API"
homepage = "https://github.com/izirku/gitrel"
repository = "https://github.com/izirku/gitrel"
categories = ["command-line-utilities"]
readme = "crates-io.md"
include = ["src/**/*.rs", "build.rs", "crates-io.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
anyhow = "1.0"
bytesize = "1.1"
bzip2 = "0.4"
cfg-if = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.2", features = ["derive", "env", "cargo"] }
console = "0.15"
directories = "4.0"
flate2 = "1.0"
futures-util = "0.3"
glob = "0.3"
indicatif = "0.17"
lazy_static = "1.4"
owo-colors = "3"
regex = "1.5"
reqwest = { version = "0.11", features = ["json", "stream"] }
semver = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tabled = { version = "0.8", features = ["color"] }
tar = "0.4"
tempfile = "3.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
url = { version = "2.2", features = ["serde"] }
xz = "0.1"
zip = "0.6"

[build-dependencies]
lazy_static = "1.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
