[package]
name = "gitrel"
version = "0.2.0"
authors = ["Evgenii Grigorev <zjekadev@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Install and manage binaries via GitHub releases"
homepage = "https://github.com/izirku/gitrel"
repository = "https://github.com/izirku/gitrel"
documentation = "https://docs.rs/gitrel"
categories = ["command-line-utilities"]
readme = "crates-io.md"
include = ["src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"] 

[dependencies]
anyhow = "1.0.52"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.0.7", features = ["derive", "env", "cargo"] }
directories = "4.0.1"
lazy_static = "1.4.0"
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["json", "stream"] }
semver = "1.0.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.15.0", features = ["full"] }
url = { version = "2.2.2", features = ["serde"] }
tempfile = "3.3.0"
bzip2 = "0.4.3"
xz = "0.1.0"
zip = "0.5.13"
tar = "0.4.38"
flate2 = "1.0.22"
cfg-if = "1.0.0"
tabled = { version = "0.4.2", features = ["color"] }
console = "0.15.0"
bytesize = "1.1.0"
futures-util = "0.3.19"
indicatif = "0.16.2"
dialoguer = "0.9"
ctrlc = { version = "3.2", features = ["termination"] }

[build-dependencies]
platforms = "2.0.0"
lazy_static = "1.4.0"

