[package]
name = "gitrel"
version = "0.2.0"
authors = ["Evgenii Grigorev <zjekadev@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Install and manage binaries via GitHub releases"
homepage = "https://github.com/izirku/gitrel"
repository = "https://github.com/izirku/gitrel"
documentation = "https://docs.rs/gitrel"
categories = ["command-line-utilities"]
readme = "crates-io.md"
include = ["src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"] 

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0", features = ["derive", "env", "cargo"] }
directories = "4.0"
lazy_static = "1.4"
regex = "1.5"
reqwest = { version = "0.11", features = ["json", "stream"] }
semver = "1.0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.15", features = ["full"] }
url = { version = "2.2", features = ["serde"] }
tempfile = "3.3"
bzip2 = "0.4"
xz = "0.1"
zip = "0.5"
tar = "0.4"
flate2 = "1.0.22"
cfg-if = "1.0.0"
tabled = { version = "0.4", features = ["color"] }
console = "0.15"
bytesize = "1.1"
futures-util = "0.3"
indicatif = "0.16"

[build-dependencies]
platforms = "2.0"
lazy_static = "1.4"

